yamls/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-sq2-ui
    version: v1
  name: grocery-sq-2-ui
spec:
  selector:
    matchLabels:
      app: deployment-sq2-ui
      version: v1
  template:
    metadata:
      labels:
        app: deployment-sq2-ui
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/tekton-argocd-sq-2/app:latest
        imagePullPolicy: Always
        name: deployment-sq2-ui
        ports:
        - containerPort: 3000
