yamls/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-sq2-ui
  name: service-sq2-ui
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: deployment-sq2-ui
