yamls/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: deployment-sq2-ui
  name: deployment-sq2-ui
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: deployment-sq2-ui
    weight: 100
